# color-correction

./: .gitignore  README.md  pyproject.toml
color_correction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
color_correction_tool/: app.py  contrast.py  noxrite.py  xmp.py
